--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      - uses: BSFishy/pip-action@v1
+        with:
+          packages: |
+            yaml
       - run: python release_json.py
       - uses: marvinpinto/action-automatic-releases@latest
         with:
