--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: BSFishy/pip-action@v1
         with:
           packages: |
-            yaml
+            pyyaml
       - run: python release_json.py
       - uses: marvinpinto/action-automatic-releases@latest
         with:
