--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,7 @@ jobs:
           packages: |
             pyyaml
       - run: python release_json.py
-      - uses: marvinpinto/action-automatic-releases@latest
+      - uses: ncipollo/release-action@v1
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          files: |
-            gyms.json
+          token: "${{ secrets.GITHUB_TOKEN }}"
+          artifacts: gyms.json
