--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,19 +2,19 @@ name: Release
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   Release:
     runs-on: ubuntu-latest
     steps:
-      - name: Set current date 
+      - name: Set current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y%m%d')"
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - uses: BSFishy/pip-action@v1
         with:
           packages: |
@@ -23,4 +23,4 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
-          tag: ${{ steps.date.outputs.date }}-${{GITHUB_SHA}}
+          tag: ${{ steps.date.outputs.date }}-${{ env.GITHUB_SHA }}
