--- a/gyms/重庆/重庆/黑公羊攀岩.yaml
+++ b/gyms/重庆/重庆/黑公羊攀岩.yaml
@@ -1,5 +1,5 @@
 name: 黑公羊攀岩
 province: 重庆
 city: 重庆
-address: 长江大桥南桥头（重庆游乐园内）
-phone: 023-62802724 023-62620911
+address: 烟雨路1号江南羽毛球馆
+phone: 023-62620911
