--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -15,4 +15,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v4
+        with:
+          path: "requirements.txt"
       - run: python validate.py
