--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,15 +16,16 @@ jobs:
     steps:
       - name: Set current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y%m%d')"
+        run: echo "{date}={$(date +'%Y%m%d')}" >> $GITHUB_OUTPUT
+
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - uses: BSFishy/pip-action@v1
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v4
         with:
-          packages: |
-            pyyaml
+          path: "requirements.txt"
       - run: python release_json.py
       - uses: ncipollo/release-action@v1
         with:
